# skeleton

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  migrate_ruff.py  pyproject.toml  ruff.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  prerelease.yml
docs/: conf.py  index.rst
src/PROJECT/: __init__.py  __main__.py
src/PROJECT/cli/: __init__.py
tests/: test_import.py
tests/data/: README.md  __init__.py
tests/data/datasets/: README.md
